更新：改掉一个拼写错误，调整放大镜边框样式

--- a/demo/index.html
+++ b/demo/index.html
@@ -20,7 +20,7 @@
         </div>
     </div>
     <script src='./jquery-3.2.1.min.js'></script>
-    <script src='../easyzoom.min.js'></script>
+    <script src='../easyzoom.js'></script>
     <script>
         $('.easy1').easyZoom({
             width: 300,
