更新：文档增加兼容性表，更换展示图片

--- a/demo/index.html
+++ b/demo/index.html
@@ -13,7 +13,7 @@
 <body>
     <div class='container'>
         <div class='easyzoom easy1'>
-            <img src='./images/gakki.png'>
+            <img src='./images/gakki.jpg'>
         </div>
         <div class='easyzoom easy2'>
             <img src='./images/ldy.jpeg'>
